--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "runtimeVersion": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/WeatherBuddyKidds.png",
     "userInterfaceStyle": "light",
     "primaryColor": "#4A90D9",
     "splash": {
@@ -43,7 +43,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/WeatherBuddyKidds.png",
         "backgroundColor": "#FFF2CC"
       },
       "permissions": [
@@ -66,7 +66,7 @@
       [
         "expo-notifications",
         {
-          "sounds": []
+          "sounds": ["./assets/sounds/standard.wav"]
         }
       ]
     ],
